// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography inherit size render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
    >
      Inherit font size
    </p>
  </div>
</div>
`;

exports[`Typography renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
    >
      Just Typography
    </p>
  </div>
</div>
`;

exports[`Typography variant heading small render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <h4
      class="m-0 text-black font-semibold text-md text-black"
    >
      Heading small
    </h4>
  </div>
</div>
`;
